styles/form.css
body {
    margin: 0;
    padding: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: "Roboto", sans-serif;
    background-color: #ffffff;
}

header {
    background-color: #2a0a2a;
    color: white;
    padding: 1rem;
    text-align: center;
}


.form-container {
    flex: 1;
    padding: 1rem;
    max-width: 800px;
    margin: 0 auto;
    width: 100%;
    justify-content: center;
    align-items:center;
}

form {
    background-color: #e6e6e6;
    padding: 3rem;
    border-radius: 10px;
}

.form-group {
    margin-bottom: 1.5rem;
}

label {
    display: block;
    font-size: 1.2em;
    margin-bottom: 0.5rem;
    color: #000;
    font-weight: bold;
    text-align:center;
}

select, input[type="date"], input[type="text"], textarea {
    width: 100%;
    padding: 0.8rem;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 1em;
    background-color: white;
    
    
}

.rating {
    display: flex;
    flex-direction: row;
    gap: 7rem;
    margin-top: 0.5rem;
}

.rating label {
    display: flex;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
}

.rating input[type="radio"] {
    margin-top: 0.5rem;
}

.features {
    display: grid;
    
    gap: 1rem;
}

.feature-item {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.feature-item label {
    font-weight: normal;
    margin: 0;
}

.optional {
    color: #333;
    font-weight: normal;
    font-style: italic;
}


input[type="submit"] {
    width: 100%;
    padding: 1rem;
    background-color: #2a0a2a;
    color: white;
    border: none;
    border-radius: 5px;
    font-size: 1.2em;
    cursor: pointer;
    margin-top: 1rem;
}

input[type="submit"]:hover {
    background-color: #3d0f3d;
}


.footer {
    background-color: #2a0a2a;
    color: white;
    padding: 1rem;
    text-align: center;
}

.footer p {
    margin: 5px 0;
    font-size: 1.1rem;
}

